<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InsertCountryActivity" >

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/country" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/country"
        android:layout_marginTop="34dp"
        android:text="@string/year" />

    <EditText
        android:id="@+id/countryEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/country"
        android:layout_alignBottom="@+id/country"
        android:layout_toRightOf="@+id/country"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/yearEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/year"
        android:layout_alignBottom="@+id/year"
        android:layout_alignRight="@+id/countryEdit"
        android:layout_toRightOf="@+id/year"
        android:ems="10"
        android:inputType="date" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yearEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/button2" 
        android:onClick="addCountryYear"/>

</RelativeLayout>