<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ColorDisplay" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonColor" 
        android:onClick="changeColor"
        />
    
<!-- ************************************************************************************** -->
    <TextView
        android:id="@+id/red"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/redEdit"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:text="@string/red" />
    <EditText
         android:id="@+id/redEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/red"
         android:layout_alignRight="@+id/red"
         android:layout_above="@id/button1"
         android:ems="10"
         android:inputType="number" >
         <requestFocus />
     </EditText>
    
    
<!-- *************************************************************************************      -->

     <TextView
         android:id="@+id/green"
         android:layout_width="55dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/greenEdit"
         android:layout_centerHorizontal="true"
         android:text="@string/green" />
     <EditText
         android:id="@+id/greenEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/button1"
         android:layout_alignLeft="@+id/green"
         android:layout_alignRight="@id/green"
         android:ems="10"
         android:inputType="number" />
     

<!--  ***********************************************************************************    -->
     <TextView
        android:id="@+id/blue"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/blueEdit"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/blue" />
     <EditText
         android:id="@+id/blueEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:layout_above="@id/button1"
        android:layout_alignLeft="@+id/blue"
        android:layout_alignRight="@+id/blue"
         android:ems="10"
         android:inputType="number" />

     <TextView
         android:id="@+id/backGround"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="105dp"
         android:background="#ff000000"
          />

</RelativeLayout>
